--- a/M03/task1.html
+++ b/M03/task1.html
@@ -23,5 +23,5 @@
         <img src="" alt="" id="gambar" height="200px">
     </div>
 </body>
-<script src="test.js"></script>
+<script src="test1.js"></script>
 </html>
