--- a/M03/task1.html
+++ b/M03/task1.html
@@ -1,27 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Lat1</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
 </head>
 <style>
     body{
         text-align: center;
-        background-color: aquamarine
+        background-color: aquamarine;
+        font-style: italic;
     }
-    div{
-        border-style: double;
-        background-color: rgb(255,255,0);
+    table{
+        background-color: aliceblue;
+        margin: 10px;
+    }
+    tr{
+        background-color: rgb(255,255,0);;
     }
 </style>
 <body>
-    <div>
-        <p>Punny Web</p>
-        <h1 id="author"></h1>
-        <img src="" alt="" id="gambar" height="200px">
+    <div class="container mt-5">
+      <h1 class="text-center mb-4">Punny Web</h1>
+        <table class="table table-striped" id="dataTabel">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Username</th>
+                <th>Email</th>
+                <th>City</th>
+            </tr>
+        </table>
     </div>
 </body>
-<script src="test1.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer" ></script>
+<script>
+    $(document).ready(function () {
+      let show = function (response) {
+        data = $.parseJSON(response);
+        var trHTML = "";
+        $(function () {
+          $.each(data, function (i, item) {
+            trHTML +=
+              "<tr><td>" +
+              item.id +
+              "</td><td>" +
+              item.name +
+              "</td><td>" +
+              item.username +
+              "</td></td>" +
+              item.email +
+              "</td><td>" +
+              item.email +
+              "</td><td>" +
+              item.address.city +
+              "</td></tr>";
+          });
+          $("#dataTabel").append(trHTML);
+        });
+      };
+
+      let load = function () {
+        let link = "https://jsonplaceholder.typicode.com/users";
+        let xhr;
+        xhr = new XMLHttpRequest();
+        try {
+          xhr = new XMLHttpRequest();
+          if (!xhr) return -1;
+
+          xhr.onreadystatechange = function () {
+            if (xhr.readyState === 4 && xhr.status === 200) {
+              show(xhr.responseText);
+            }
+          };
+
+          xhr.open("GET", link);
+          xhr.send();
+        } catch (e) {
+          console.log(e);
+        }
+      };
+      load();
+    });
+</script>
+
 </html>
